[package]
name = "celestial"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib"]

[dependencies]
bincode = "1.3.3"
directx_math = "0.2.3"
egui = "0.27"
egui-directx11 = { git = "https://github.com/Hellbufl/egui-directx.git" }
egui-keybind = { git = "https://github.com/Hellbufl/egui-keybind.git", features = ["serde"] }
egui-win32 = { git = "https://github.com/Hellbufl/egui-directx.git" }
glam = { version = "0.29.0", features = ["serde"] }
lazy_static = "1.5.0"
native-dialog = "0.7.0"
ocular = { git = "https://github.com/WoefulWolf/ocular-rs.git" }
once_cell = "1.20.3"
# pintar = { git = "https://github.com/Hellbufl/pintar.git" }
pintar = { path = "../pintar" }
retour = "0.3"
rust-ini = "0.21.1"
serde = { version = "1.0.208", features = ["derive"] }
serde-binary = "0.5.0"
serde_json = "1.0.132"
sha2 = "0.10.9"
thiserror = "2.0.12"
tracing = "0.1"
tracing-appender = "0.2"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
uuid = { version = "1.10.0", features = ["serde", "v4"] }

[dependencies.windows]
version = "0.51.1"
features = [
    "Win32_System_LibraryLoader",
    "Win32_System_Console",
    "Win32_System_SystemServices",
    "Win32_System",
    "Win32_Graphics_Dxgi",
    "Win32_Graphics_Dxgi_Common",
    "Win32_Graphics_Direct3D11",
    "Win32_Foundation",
    "Win32_UI_WindowsAndMessaging",
    "Win32_Graphics_Direct3D",
    "Win32_Devices",
    "Win32_Devices_HumanInterfaceDevice",
]
